Fix bar chart overlap issues.
Our bar charts on the modeling page were overlapping the y axis labels and the
legend values were overlapping the bars and were in an order reveresed from the
actual bar charts.

 * Set a fixed offset for the bars to prevent overlapping axis labels.
 * Set a bar chart area percentage that gives breathing room to the legend.
 * Reverse the legend data when rendering so that it matches the bar chart.

--- a/src/mmw/sass/pages/_model.scss
+++ b/src/mmw/sass/pages/_model.scss
@@ -27,7 +27,7 @@
 
   .bar-chart-region{
     height: 100%;
-    width: 30%;
+    width: 50%;
   }
 
   .tab-content{
